--- a/build.gradle
+++ b/build.gradle
@@ -25,13 +25,13 @@ dependencies {
     implementation 'javax.xml.bind:jaxb-api:2.3.1'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.projectlombok:lombok'
-    runtimeOnly 'com.h2database:h2'
+    runtimeOnly 'com.mysql:mysql-connector-j'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testAnnotationProcessor 'org.projectlombok:lombok'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
-
 }
+
 
 test {
     useJUnitPlatform()
